Added a method to calculate HASH for password

--- a/SchoolDiarySystem/Views/User/ChangePassword.cshtml
+++ b/SchoolDiarySystem/Views/User/ChangePassword.cshtml
@@ -28,29 +28,30 @@
                 </div>
                 @using (Html.BeginForm("ChangePassword", "User", FormMethod.Post))
                 {
-                    <form class="new-added-form">
-                        <div class="row">
-                            <div class="col-xl-4 col-lg-4 col-12 form-group">
-                                @Html.HiddenFor(m => m.UserID)
-                                <label>Username *</label>
-                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "lastname", disabled = "disabled" })
-                                @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-4 col-lg-4 col-12 form-group">
-                                <label>Password *</label>
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Type Password", id = "password" })
-                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-4 col-lg-4 col-12 form-group">
-                                <label>Confirm Password </label>
-                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password", id = "confirmPass" })
-                                @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-12 form-group mg-t-8">
-                                <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
-                            </div>
-                        </div>
-                    </form>
+            <form class="new-added-form">
+                @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 col-12 form-group">
+                        @Html.HiddenFor(m => m.UserID)
+                        <label>Username *</label>
+                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "lastname", disabled = "disabled" })
+                        @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-12 form-group">
+                        <label>Password *</label>
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Type Password", id = "password" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-12 form-group">
+                        <label>Confirm Password </label>
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password", id = "confirmPass" })
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-12 form-group mg-t-8">
+                        <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                    </div>
+                </div>
+            </form>
                 }
             </div>
         </div>
