--- a/SchoolDiarySystem/Views/Comment/Details.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Details.cshtml
@@ -61,7 +61,7 @@
                                         <td>
                                             <a href="@Url.Action("Index", "Comment")">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Back to List" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-dark-pastel-green" />
                                                 </div>
                                             </a>
                                         </td>
