--- a/SchoolDiarySystem/Views/Subject/Details.cshtml
+++ b/SchoolDiarySystem/Views/Subject/Details.cshtml
@@ -55,28 +55,25 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            @using (Html.BeginForm("Update", "Subject", new { id = Model.SubjectID }, FormMethod.Post))
-                                            {
+                                            <a href="@Url.Action("Update", "Subject", routeValues: new { id = Model.SubjectID })">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Update" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                                                    <input type="submit" value="Update" class="btn-fill-md text-light bg-dark-pastel-green" />
                                                 </div>
-                                            }
+                                            </a>
                                         </td>
                                         <td>
-                                            @using (Html.BeginForm("Delete", "Subject", new { id = Model.SubjectID }, FormMethod.Post))
-                                            {
+                                            <a href="@Url.Action("Delete", "Subject", routeValues: new { id = Model.SubjectID })">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Delete" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                                                    <input type="submit" value="Delete" class="btn-fill-md text-light bg-dark-pastel-green" />
                                                 </div>
-                                            }
+                                            </a>
                                         </td>
                                         <td>
-                                            @using (Html.BeginForm("Index", "Subject", FormMethod.Post))
-                                            {
+                                            <a href="@Url.Action("Index", "Subject")">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Back to List" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-dark-pastel-green" />
                                                 </div>
-                                            }
+                                            </a>
                                         </td>
                                     </tr>
                                 </tbody>
