Turned autocomplete off, to all textboxes.

--- a/SchoolDiarySystem/Views/Review/CommentList.cshtml
+++ b/SchoolDiarySystem/Views/Review/CommentList.cshtml
@@ -33,7 +33,7 @@
                                         <input type="text" autocomplete="off" placeholder="Search by Date ..." name="searchString" class="form-control air-datepicker">
                                     </div>
                                     <div class="col-lg-5 col-12 form-group">
-                                        <input type="text" placeholder="Search by Title ..." name="searchString2" class="form-control">
+                                        <input type="text" autocomplete="off" placeholder="Search by Subject ..." name="searchString2" class="form-control">
                                     </div>
                                     <div class="col-lg-2 col-12 form-group">
                                         <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
