--- a/SchoolDiarySystem/Views/Room/Index.cshtml
+++ b/SchoolDiarySystem/Views/Room/Index.cshtml
@@ -49,7 +49,7 @@
                         <form class="mg-b-20">
                             <div class="row gutters-8">
                                 <div class="col-lg-10 form-group">
-                                    <input type="text" placeholder="Search by Room Type ..." name="searchString" class="form-control">
+                                    <input type="text" autocomplete="off" placeholder="Search by Room Type ..." name="searchString" class="form-control">
                                 </div>
                                 <div class="col-lg-2 col-12 form-group">
                                     <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
