--- a/SchoolDiarySystem/Views/Class/Update.cshtml
+++ b/SchoolDiarySystem/Views/Class/Update.cshtml
@@ -34,13 +34,11 @@
                                 @Html.DropDownListFor(m => m.TeacherID, Model.TeacherList, htmlAttributes: new { @class = "select2" })
                                 @Html.ValidationMessageFor(m => m.TeacherID, "", new { @class = "text-danger" })
                             </div>
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>Class Number *</label>
-                                @Html.TextBoxFor(m => m.ClassNo, new { @class = "form-control", placeholder = "Write class number...", id = "classNo", @readonly = "true" })
+                                @Html.TextBoxFor(m => m.ClassNo, new { @class = "form-control", placeholder = "Write class number...", id = "classNo", @readonly = "true", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.ClassNo)
                             </div>
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="col-xl-4 col-lg-6 col-12 form-group">
                             <label>Room Type *</label>
                             @Html.DropDownListFor(m => m.RoomID, Model.RoomList, htmlAttributes: new { @class = "select2" })
