--- a/SchoolDiarySystem/Views/Comment/Create.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Create.cshtml
@@ -33,19 +33,16 @@
                                 @Html.DropDownListFor(m => m.StudentID, Model.StudentsList, new { @class = "select2" })
                                 @Html.ValidationMessageFor(m => m.StudentID, "", new { @class = "text-danger" })
                             </div>
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Select Subject *</label>
                                 @Html.DropDownListFor(m => m.SubjectID, Model.SubjectsList, new { @class = "select2" })
                                 @Html.ValidationMessageFor(m => m.SubjectID, "", new { @class = "text-danger" })
                             </div>
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Select Date *</label>
-                                @Html.TextBoxFor(m => m.CommentDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "dob" })
+                                @Html.TextBoxFor(m => m.CommentDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "commentdate", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.CommentDate, "", new { @class = "text-danger" })
                             </div>
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Select Time *</label>
                                 @Html.DropDownListFor(m => m.Time, Model.Times, new { @class = "select2" })
@@ -53,7 +50,7 @@
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Comment *</label>
-                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "lastname" })
+                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "content", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.Content, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
