--- a/SchoolDiarySystem/Views/Comment/Index.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Index.cshtml
@@ -51,7 +51,7 @@
                                         <input type="text" autocomplete="off" placeholder="Search by date ..." name="searchString" class="form-control air-datepicker">
                                     </div>
                                     <div class="col-lg-5 col-12 form-group">
-                                        <input type="text" placeholder="Search by student ..." name="searchString2" class="form-control">
+                                        <input type="text" autocomplete="off" placeholder="Search by student ..." name="searchString2" class="form-control">
                                     </div>
                                     <div class="col-lg-2 col-12 form-group">
                                         <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
