--- a/SchoolDiarySystem/Views/Comment/Review.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Review.cshtml
@@ -26,13 +26,13 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-8 col-lg-6 col-12 form-group">
                                 <label>Review *</label>
-                                @Html.TextAreaFor(m => m.Review, new { @class = "textarea form-control", placeholder = "Last name...", id = "lastname" })
+                                @Html.TextAreaFor(m => m.Review, new { @class = "textarea form-control", placeholder = "Last name...", id = "review", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.Review, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Select Date *</label>
-                                @Html.TextBoxFor(m => m.ReviewDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "reveiwDate" })
+                                @Html.TextBoxFor(m => m.ReviewDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "reveiwDate", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.ReviewDate, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
