--- a/SchoolDiarySystem/Views/Comment/Update.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Update.cshtml
@@ -30,10 +30,9 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>Select Date *</label>
-                                @Html.TextBoxFor(m => m.CommentDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "dob" })
+                                @Html.TextBoxFor(m => m.CommentDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "commentDate", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.CommentDate, "", new { @class = "text-danger" })
                             </div>
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="col-xl-4 col-lg-6 col-12 form-group">
                             <label>Select Time *</label>
                             @Html.DropDownListFor(m => m.Time, Model.Times, new { @class = "select2" })
@@ -41,7 +40,7 @@
                         </div>
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>Comment *</label>
-                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "lastname", height = "20", width = "20" })
+                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "content", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.Content, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
