--- a/SchoolDiarySystem/Views/Room/Create.cshtml
+++ b/SchoolDiarySystem/Views/Room/Create.cshtml
@@ -30,13 +30,13 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-6 col-lg-6 col-12 form-group">
                                 <label>Room Number *</label>
-                                @Html.TextBoxFor(m => m.RoomNo, new { @class = "form-control", placeholder = "Write room number...", id = "firstname" })
+                                @Html.TextBoxFor(m => m.RoomNo, new { @class = "form-control", placeholder = "Write room number...", type = "number", id = "firstname", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.RoomNo, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-6 col-lg-6 col-12 form-group">
                                 <label>Room Type *</label>
-                                @Html.TextBoxFor(m => m.RoomType, new { @class = "form-control", placeholder = "Laboratory, Class,...", id = "lastname" })
+                                @Html.TextBoxFor(m => m.RoomType, new { @class = "form-control", placeholder = "Laboratory, Class,...", id = "lastname", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.RoomType, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
