--- a/SchoolDiarySystem/Views/User/ChangePassword.cshtml
+++ b/SchoolDiarySystem/Views/User/ChangePassword.cshtml
@@ -7,7 +7,6 @@
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Change Password</h3>
             <ul>
@@ -17,8 +16,6 @@
                 <li>Change Password</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Add New Teacher Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
@@ -34,7 +31,7 @@
                     <div class="col-xl-4 col-lg-4 col-12 form-group">
                         @Html.HiddenFor(m => m.UserID)
                         <label>Username *</label>
-                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "lastname", disabled = "disabled" })
+                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "lastname", disabled = "disabled", autocomplete = "off" })
                         @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-xl-4 col-lg-4 col-12 form-group">
