--- a/SchoolDiarySystem/Views/User/CreateAdmin.cshtml
+++ b/SchoolDiarySystem/Views/User/CreateAdmin.cshtml
@@ -7,7 +7,6 @@
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Create Admin</h3>
             <ul>
@@ -17,8 +16,6 @@
                 <li>Create Admin</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Add New Teacher Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
@@ -32,23 +29,23 @@
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>First Name *</label>
-                                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname" })
+                                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>Last Name *</label>
-                                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last name...", id = "lastname" })
+                                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last name...", id = "lastname", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-xl-4 col-lg-4 col-12 form-group">
                                 <label>Expire Date *</label>
-                                @Html.TextBoxFor(m => m.ExpiresDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "expire" })
+                                @Html.TextBoxFor(m => m.ExpiresDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "expire", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.ExpiresDate, "", new { @class = "text-danger" })
                                 <i class="far fa-calendar-alt"></i>
                             </div>
                             <div class="col-xl-4 col-lg-4 col-12 form-group">
                                 <label>Username *</label>
-                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "lastname" })
+                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "username", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-xl-4 col-lg-4 col-12 form-group">
