--- a/SchoolDiarySystem/Views/User/Update.cshtml
+++ b/SchoolDiarySystem/Views/User/Update.cshtml
@@ -8,7 +8,6 @@
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
-        <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Update</h3>
             <ul>
@@ -18,8 +17,6 @@
                 <li>Update User</li>
             </ul>
         </div>
-        <!-- Breadcubs Area End Here -->
-        <!-- Add New Teacher Area Start Here -->
         <div class="card height-auto">
             <div class="card-body">
                 <div class="heading-layout1">
@@ -36,12 +33,12 @@
                                 <div class="col-xl-4 col-lg-6 col-12 form-group">
                                     @Html.HiddenFor(m => m.UserID)
                                     <label>First Name *</label>
-                                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname" })
+                                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname", autocomplete = "off" })
                                     @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
                                 </div>
                                 <div class="col-xl-4 col-lg-6 col-12 form-group">
                                     <label>Last Name *</label>
-                                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last name...", id = "lastname" })
+                                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last name...", id = "lastname", autocomplete = "off" })
                                     @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
                                 </div>
                             }
@@ -65,13 +62,13 @@
                             }
                             <div class="col-xl-4 col-lg-4 col-12 form-group">
                                 <label>Expire Date *</label>
-                                @Html.TextBoxFor(m => m.ExpiresDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "expire" })
+                                @Html.TextBoxFor(m => m.ExpiresDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "expire", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.ExpiresDate, "", new { @class = "text-danger" })
                                 <i class="far fa-calendar-alt"></i>
                             </div>
                             <div class="col-xl-4 col-lg-4 col-12 form-group">
                                 <label>Username *</label>
-                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "lastname" })
+                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "username", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
