Changed the color of buttons in details

--- a/SchoolDiarySystem/Views/Parent/Details.cshtml
+++ b/SchoolDiarySystem/Views/Parent/Details.cshtml
@@ -52,21 +52,21 @@
                                         <td>
                                             <a href="@Url.Action("Update", "Parent", routeValues: new { id = Model.ParentID })">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Update" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Update" class="btn-fill-md text-light bg-dodger-blue" />
                                                 </div>
                                             </a>
                                         </td>
                                         <td>
                                             <a href="@Url.Action("Delete", "Parent", routeValues: new { id = Model.ParentID })">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Delete" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Delete" class="btn-fill-md radius-4 text-light bg-orange-red" />
                                                 </div>
                                             </a>
                                         </td>
                                         <td>
                                             <a href="@Url.Action("Index", "Parent")">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-orange-peel" />
                                                 </div>
                                             </a>
                                         </td>
