--- a/SchoolDiarySystem/Views/Review/CommentList.cshtml
+++ b/SchoolDiarySystem/Views/Review/CommentList.cshtml
@@ -25,7 +25,7 @@
                                 <h3>Comment Board</h3>
                             </div>
                         </div>
-                        @using (Html.BeginForm("Index", "Comment", FormMethod.Get))
+                        @using (Html.BeginForm("CommentList", "Review", FormMethod.Get))
                         {
                             <form class="mg-b-20">
                                 <div class="row gutters-8">
