--- a/SchoolDiarySystem/Views/Review/Details.cshtml
+++ b/SchoolDiarySystem/Views/Review/Details.cshtml
@@ -45,14 +45,14 @@
                                         <td>
                                             <a href="@Url.Action("Update", "Review", routeValues: new { id = Model.CommentID })">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Update" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Update" class="btn-fill-md text-light bg-dodger-blue" />
                                                 </div>
                                             </a>
                                         </td>
                                         <td>
                                             <a href="@Url.Action("Index", "Review")">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-orange-peel" />
                                                 </div>
                                             </a>
                                         </td>
