--- a/SchoolDiarySystem/Views/Review/Update.cshtml
+++ b/SchoolDiarySystem/Views/Review/Update.cshtml
@@ -45,7 +45,7 @@
                         @Html.ValidationMessageFor(m => m.ReviewDate, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-12 form-group mg-t-8">
-                        <input type="submit" value="Review" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                        <input type="submit" value="Update" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
                     </div>
                 </div>
             </form>
