--- a/SchoolDiarySystem/Views/Room/Details.cshtml
+++ b/SchoolDiarySystem/Views/Room/Details.cshtml
@@ -44,21 +44,21 @@
                                         <td>
                                             <a href="@Url.Action("Update", "Room", routeValues: new { id = Model.RoomID })">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Update" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Update" class="btn-fill-md text-light bg-dodger-blue" />
                                                 </div>
                                             </a>
                                         </td>
                                         <td>
                                             <a href="@Url.Action("Delete", "Room", routeValues: new { id = Model.RoomID })">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Delete" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Delete" class="btn-fill-md radius-4 text-light bg-orange-red" />
                                                 </div>
                                             </a>
                                         </td>
                                         <td>
                                             <a href="@Url.Action("Index", "Room")">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-orange-peel" />
                                                 </div>
                                             </a>
                                         </td>
