--- a/SchoolDiarySystem/Views/User/Details.cshtml
+++ b/SchoolDiarySystem/Views/User/Details.cshtml
@@ -139,21 +139,21 @@
                                         <td>
                                             <a href="@Url.Action("Update", "User", routeValues: new { id = Model.UserID })">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Update" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Update" class="btn-fill-md text-light bg-dodger-blue" />
                                                 </div>
                                             </a>
                                         </td>
                                         <td>
                                             <a href="@Url.Action("Delete", "User", routeValues: new { id = Model.UserID })">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Delete" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Delete" class="btn-fill-md radius-4 text-light bg-orange-red" />
                                                 </div>
                                             </a>
                                         </td>
                                         <td>
                                             <a href="@Url.Action("Index", "User")">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-dark-pastel-green" />
+                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-orange-peel" />
                                                 </div>
                                             </a>
                                         </td>
